all over the place

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -17,7 +17,7 @@
 \newcommand{\Comment}[1]{\textcolor{Blue}{(Comment: #1)}}
 
 \newcommand{\exec}{{Executive Team}}
-\newcommand{\shorte}{{ET }}  %abbrev for \exec
+\newcommand{\shorte}{{ET}}  %abbrev for \exec
 
 %% Define a new 'leo' style for the package that will use a smaller font.
 \makeatletter
@@ -58,7 +58,7 @@ This document outlines the Collaboration governance and organization of scientif
 
 \item The organizational structure of the Collaboration should enable broad representation of its members, and encourage consensus in decision making. %while fostering 
 
-\item   All members of the Collaboration will be expected to contribute to the success of the Collaboration and the Project through work on one or more areas of necessary infrastructure. The organizational structure should incentivize Collaboration members to contribute to the advancement CMB-S4 including work on hardware, software, testing, commissioning, operations, common science infrastructure, documentation and publications.
+\item   All members of the Collaboration will be expected to contribute to the success of the Collaboration and the Project through work on one or more areas of necessary infrastructure. The organizational structure should incentivize Collaboration members to contribute to the advancement CMB-S4 including work on hardware, software, testing, commissioning, operations, common science infrastructure, documentation,  publications,  management tasks and serving in leadership roles.
 
 %\item All members of the collaboration will be expected to contribute to the success of the project through work on one or more areas of necessary infrastructure.
 
@@ -73,7 +73,7 @@ and provide a healthy collaboration culture that establishes standards for behav
 The CMB-S4 Construction Project (the Project) is distinct from the CMB-S4 Science Collaboration (the Collaboration). The Project will be responsible for final design and construction of CMB-S4, which by necessity will have strong oversight and  report directly to the associated funding agencies and other sources of funding.  The Collaboration and Project must work closely together; many Collaboration members are expected to have important roles within the Project. The Project ends when construction is completed and operations begin. Operations may be the responsibility of the Collaboration, or may be conducted by a distinct entity working closely with the Collaboration. These Bylaws pertain only to the Science Collaboration and do not specify the structure of, or relationship to, the Project or Operations. 
 \vskip 12pt
 
-Throughout this document,  a ``supermajority vote" is defined as a result with more than two-thirds of the votes received in favor of  the motion.   A ``majority vote" requires only half the votes received.   A ``quorum" for a meeting is defined as the presence of a majority of a body's members.   For collaboration-wide votes, a ``Voting Member" is  defined as a Senior Member or a Postdoctoral Member (see \S\ref{sec:memberrights}). ``Ex officio" members of a governance body are those whose membership is owing to their roles elsewhere in the Collaboration.  For example, the Science Council chairs (\S\ref{sec:SC}) are ex officio members of the Executive Team (\S\ref{sec:exec}).  
+Throughout this document,  a ``supermajority vote" is defined as a result with more than two-thirds of the votes received are in favor of  the motion.   A ``majority vote" requires more than half the votes received are in favor of  the motion.   A ``quorum" for a meeting is defined as the presence of a majority of a body's members.   For collaboration-wide votes, a ``Voting Member" is  defined as a Senior Member or a Postdoctoral Member (see \S\ref{sec:memberrights}). ``Ex officio" members of a governance body are those whose membership is owing to their roles elsewhere in the Collaboration.  For example, the Science Council chairs (\S\ref{sec:SC}) are ex officio members of the Executive Team (\S\ref{sec:exec}).  
 
  %The presence of a simple majority of a body's members constitutes quorum for a meeting, and two-thirds of a body must be present for a vote to be valid.
 
@@ -117,7 +117,7 @@ Governing Board responsibilities include, but are not limited to:  %omitted "Col
 
 %\item Oversight of the activities of the co-spokespersons. The GB may require a detailed verbal, or written report from the co-spokespersons on any action. 
 
-\item Formal acceptance of new Collaboration members, and resolution of membership conflicts/issues, such as the removal of members and institutions from the Collaboration. The change in status of a member (including acceptance or removal) requires approval by a supermajority of the GB.
+\item Formal acceptance of new Collaboration members, and resolution of membership conflicts/issues, such as the removal of members from the Collaboration. The change in status of a member (including acceptance or removal) requires approval by a supermajority of the GB.
 
 \item Organization of elections for Spokespersons, GB members, and other elected Collaboration officials (see \S\ref{sec:elections}).  
 
@@ -159,7 +159,7 @@ The secretary of the GB is chosen informally by the GB chair to serve during the
 
 
 \subsection{Governing Board Meetings}
-The first Governing Board will establish rules for its meetings after electing its chair. This first meeting will be held no later than two months after the selection of the board.  Agendas for scheduled meetings will be available to the full Collaboration in advance.  It is expected that the board will meet no less than quarterly to ensure adequate attention to its duties. Such meetings will likely occur in closed session at every Collaboration meeting and in meetings held by telephone or video conference. Special meetings can be called on the initiative of the GB chair or at the request of another GB member. The Spokespersons are typically asked to attend GB meetings, with the exception of any Closed Executive Sessions during the meetings.  The GB chair can invite other observers at their discretion. Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB members must cast votes (including abstentions) for a vote to be valid.  
+The first Governing Board will establish rules for its meetings after electing its chair. This first meeting will be held no later than two months after the selection of the board.  Agendas for scheduled meetings will be available to the full Collaboration in advance.  It is expected that the board will meet no less than quarterly to ensure adequate attention to its duties. Such meetings will likely occur in closed session at every Collaboration meeting and in meetings held by telephone or video conference. Special meetings can be called on the initiative of the GB chair or at the request of another GB member. The Spokespersons are typically asked to attend GB meetings, with the exception of any Closed Executive Sessions during the meetings.  The GB chair can invite other observers at their discretion. Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB members must cast votes directly or through proxies (including abstentions) for a vote to be valid.  
 GB votes can be held by email or other online method. Summaries of the GB meetings are distributed to the full Collaboration by the GB chair or GB secretary. These summaries must include meeting attendance and the %records of the votes cast by all GB members.
 results of any votes taken.
  It is the expectation that GB members participate in the majority of meetings. If a GB member fails to participate %(via meeting attendance or email) 
@@ -228,27 +228,27 @@ Spokespersons are elected to two-year terms. The election process is detailed be
 
 \subsection{Scope}
 
-The \exec \ (\shorte) is an elected and appointed board led by the co-spokespersons. It consists of up to 10 members: the co-spokespersons, the two elected co-chairs of the Science Council, the two co-chairs of the Technical Council, the chair of the Membership Committee, the chair of the Publication and Speakers Committee, and up to two  members appointed by the Spokespersons. The ET is the agile decision-making body in the Collaboration with the ability to address the day-to-day collaboration issues.  The structure of the \shorte is to facilitate the flow of information to the co-spokespersons from the Collaboration and vice versa, as well as to provide a sounding board for the co-spokespersons.
+The \exec \ (\shorte) is an elected and appointed board led by the co-spokespersons. It consists of up to 10 members: the co-spokespersons, the two elected co-chairs of the Science Council, the two co-chairs of the Technical Council, the chair of the Membership Committee, the chair of the Publication and Speakers Committee, and up to two  members appointed by the Spokespersons. The ET is the agile decision-making body in the Collaboration with the ability to address the day-to-day collaboration issues.  The structure of the \shorte\ is to facilitate the flow of information to the co-spokespersons from the Collaboration and vice versa, as well as to provide a sounding board for the co-spokespersons.
 
 The \exec \ has three main roles:
 \begin{itemize}
 %\item to facilitate the flow of information to the co-spokespersons from the Collaboration and vice versa.
 
-\item to provide leadership on scientific, membership, financial, and organizational decisions and issues. The decisions will ultimately be made by the co-spokespersons, but will be discussed and reasoned through the \exec.  In the event that the co-spokespersons do not agree on a particular topic, the \shorte will hold a vote requiring only a majority.
+\item to provide leadership on scientific, membership, financial, and organizational decisions and issues. The decisions will ultimately be made by the co-spokespersons, but will be discussed and reasoned through the \exec.  In the event that the co-spokespersons do not agree on a particular topic, the \shorte\ will hold a vote requiring only a majority.
 
-\item to ensure spokespersons decisions are made in the best interests of the Collaboration.  Any two \shorte members may call for a vote on any topic, and if $\geq 50\%$ of the \shorte is in disagreement with proposed activities of the spokespersons, the issue is referred to the Governing Board for further discussion. 
+\item to ensure spokespersons decisions are made in the best interests of the Collaboration.  Any two \shorte\ members may call for a vote on any topic, and if $\geq 50\%$ of the \shorte\ is in disagreement with proposed activities of the spokespersons, the issue is referred to the Governing Board for further discussion. 
 
 \item to aid the co-spokespersons in being the Collaboration liaison to the Project, both in the pre-Project development phase and after it is officially established.
 
 \end{itemize}
 
-% TOOK THIS OUT BECAUSE ALL THE TERMS FOR CHAIRS ETC ARE DESCRIBED ELSEWHERE:  Elected \exec \ members serve two-year terms with elections governed as described in Section \ref{sec:elections}. The appointment of up to two \shorte members by the co-spokespersons is described in Section \ref{sec:spokes}. 
+% TOOK THIS OUT BECAUSE ALL THE TERMS FOR CHAIRS ETC ARE DESCRIBED ELSEWHERE:  Elected \exec \ members serve two-year terms with elections governed as described in Section \ref{sec:elections}. The appointment of up to two \shorte\ members by the co-spokespersons is described in Section \ref{sec:spokes}. 
 
 
 \subsection{\exec \ Meetings}
 
-The Spokespersons will chair the meetings, provide the agendas, and establish rules for these meetings. The first meeting will be held no later than two weeks after the election of the Spokespersons and the Council and Committee chairs. It is expected that the board will meet no less than twice a month to ensure adequate attention to its duties. Meetings can be called on the initiative of a Spokesperson or at the request of an \shorte\ member provided that a Spokesperson agrees. A summary of the \shorte\ meetings will be distributed to the Collaboration. Each meeting requires a quorum to conduct official \shorte\ business.  It is the expectation that \shorte members participate in the majority of meetings; \shorte members who fail to participate %via active live attendance or email in $\geq 50\%$ 
-in a majority of meetings over a one year period will be replaced in the nearest election cycle and barred from the \shorte for a two year term.  
+The Spokespersons will chair the meetings, provide the agendas, and establish rules for these meetings. The first meeting will be held no later than two weeks after the election of the Spokespersons and the Council and Committee chairs. It is expected that the board will meet no less than twice a month to ensure adequate attention to its duties. Meetings can be called on the initiative of a Spokesperson or at the request of an \shorte\ member provided that a Spokesperson agrees. Minutes that summarize the \shorte\ meetings will be distributed to the Collaboration. Each meeting requires a quorum to conduct official \shorte\ business.  It is the expectation that \shorte members participate in the majority of meetings; \shorte\ members who fail to participate %via active live attendance or email in $\geq 50\%$ 
+in a majority of meetings over a one year period will be replaced in the nearest election cycle and barred from the \shorte\ for a two year term.  
 
 
 \section{Elections}\label{sec:elections}
@@ -379,18 +379,18 @@ The Publication and Speakers Committee (PSC) consists of thirteen people includi
 
 \subsection{Junior Scientist Advancement Committee}
 
-The role of the Junior Scientist Advancement Committee (JSAC) is to ensure that junior members (defined as students and postdoctoral researchers) within the Collaboration are represented, assisted, and supported throughout the  tenure of the Collaboration. This will include arranging mentors for junior members who desire mentorship, and facilitating junior member career advancement through relevant workshops and other activities. The JSAC chair and deputy chair are appointed by the \shorte after the elections and serve 2 year terms that parallel the Collaboration's elections. Membership on the JSAC is open to volunteers from the Collaboration, with the approval of the JSAC chair. 
+The role of the Junior Scientist Advancement Committee (JSAC) is to ensure that junior members (defined as students and postdoctoral researchers) within the Collaboration are represented, assisted, and supported throughout the  tenure of the Collaboration. This will include arranging mentors for junior members who desire mentorship, and facilitating junior member career advancement through relevant workshops and other activities. The JSAC chair and deputy chair are appointed by the \shorte\ after the elections and serve 2 year terms that parallel the Collaboration's elections. Membership on the JSAC is open to volunteers from the Collaboration, with the approval of the JSAC chair. 
 
 
 \subsection{External Collaborators Committee}
 
-The role of the External Collaborators Committee (ECC) is to provide the necessary link to external follow-up observations or survey data that required to maximize the science return from CMB-S4. The ECC chair and deputy chair are appointed by the \shorte after the elections and serve terms that parallel those of the elected Collaboration positions. The chair will appoint additional members as required to ensure adequate knowledge of the collaborations being pursued resides in the ECC. Self nominations for consideration of ECC are expected. 
+The role of the External Collaborators Committee (ECC) is to provide the necessary link to external follow-up observations or survey data that required to maximize the science return from CMB-S4. The ECC chair and deputy chair are appointed by the \shorte\ after the elections and serve terms that parallel those of the elected Collaboration positions. The chair will appoint additional members as required to ensure adequate knowledge of the collaborations being pursued resides in the ECC. Self nominations for consideration of ECC are expected. 
 
-The committee will draft all the necessary documents for external collaboration agreements and memorandums of understanding (MOUs). These will be presented to the co-spokespersons and \shorte who have ability the amend and alter these agreements and MOUs as they chose. Such agreements are then brought forward by the co-spokespersons to the Governing Board for final approval. \Comment{This might also fall under Project management.}
+The committee will draft all the necessary documents for external collaboration agreements and memorandums of understanding (MOUs). These will be presented to the co-spokespersons and \shorte\ who have ability the amend and alter these agreements and MOUs as they chose. Such agreements are then brought forward by the co-spokespersons to the Governing Board for final approval. \Comment{This might also fall under Project management.}
 
 \subsection{Education and Outreach Committee}
 
-The Education and Public Outreach (EPO) committee is responsible for initiating, overseeing, and recording the Collaboration's efforts in the areas of public outreach and education. Its mission is to disseminate Collaboration results to the public and increase general scientific literacy. The committee is overseen by the \exec \ and members are appointed by the \shorte after solicitation of nominations from the full Collaboration. The chair is appointed by the co-spokespersons. Terms on the EPO follow the election cycles. A presentation of EPO efforts and written documentation of activities must be provided to the \shorte at each Collaboration meeting or when requested by the \shorte. 
+The Education and Public Outreach (EPO) committee is responsible for initiating, overseeing, and recording the Collaboration's efforts in the areas of public outreach and education. Its mission is to disseminate Collaboration results to the public and increase general scientific literacy. The committee is overseen by the \exec \ and members are appointed by the \shorte\ after solicitation of nominations from the full Collaboration. The chair is appointed by the co-spokespersons. Terms on the EPO follow the election cycles. A presentation of EPO efforts and written documentation of activities must be provided to the \shorte\ at each Collaboration meeting or when requested by the \shorte. 
 
 \section{Membership Policy}
 
