all over the place

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -52,17 +52,17 @@ This document outlines the Collaboration governance and organization of scientif
  The structure of the Collaboration was designed to adhere to the following principles:
 
 \begin{itemize}
-\item The Collaboration organization will be based on models used in other successful  large DOE and NSF-supported experiments.  %Cosmic Frontier 
+\item The Collaboration organization will be based on models used in other successful  large DOE- and NSF-supported experiments.  %Cosmic Frontier 
 
-\item The Collaboration will strive to maximum scientific the return of the experiment, producing high-quality science in a timely manner and promoting full utilization of the data through public data releases after a suitable proprietary period.
+\item The Collaboration will strive to maximum the scientific return of the experiment, producing high-quality science in a timely manner and promoting full utilization of the data through public data releases after a suitable proprietary period.
 
-\item The organizational structure of the Collaboration should enable broad representation of its members, and encourage consensus in decision making. %while fostering 
+\item The organizational structure of the Collaboration will enable broad representation of its members, and encourage consensus in decision making. %while fostering 
 
-\item   All members of the Collaboration will be expected to contribute to the success of the Collaboration and the Project through work on one or more areas of necessary infrastructure. The organizational structure should incentivize Collaboration members to contribute to the advancement CMB-S4 including work on hardware, software, testing, commissioning, operations, common science infrastructure, documentation,  publications,  management tasks and serving in leadership roles.
+\item   All members of the Collaboration will be expected to contribute to the success of the Collaboration and the Project through work on one or more areas of necessary infrastructure. The organizational structure should incentivize Collaboration members to contribute to the advancement of CMB-S4 including work on hardware, software, testing, commissioning, operations, common science infrastructure, documentation,  publications,  management tasks and serving in leadership roles.
 
 %\item All members of the collaboration will be expected to contribute to the success of the project through work on one or more areas of necessary infrastructure.
 
-\item Towards this end, the Collaboration should provide appropriate credit to data analysts, hardware and/or software builders; provide leadership opportunities and other opportunities to promote career advancement; motivate people to work together towards common goals; %to complete the key project deliverables; 
+\item Towards this end, the Collaboration should provide appropriate credit to data analysts and builders of hardware and/or software; provide leadership opportunities and other opportunities to promote career advancement; motivate people to work together towards common goals; %to complete the key project deliverables; 
 and provide a healthy collaboration culture that establishes standards for behavior consistent with high ethical standards.
 
 \end{itemize}
@@ -170,7 +170,7 @@ The GB appoints the chair and two additional members of the Election and Voting 
  % , with the exception of the chair who will serve a three-year term at the start of the collaboration (the chair position is a 2 year term thereafter) to enable a continuity between commissions. There are no term limits for this commission. 
  
  \subsection{Removal of Members  from Leadership Roles}
- The GB must inform the Collaboration of its decision to remove a member from a leadership role within one working date after the vote to remove.  In the event of a removal of someone from an elected or appointed position, the GB may make an off cycle appointment or hold a special election to fill the open position quickly, or wait until the next election cycle.  
+ The GB must inform the Collaboration of its decision to remove a member from a leadership role within one working week after the vote to remove.  In the event of a removal of someone from an elected or appointed position, the GB may make an off cycle appointment or hold a special election to fill the open position quickly, or wait until the next election cycle.  
 % A two-week collaboration-wide notice is required for a vote for removal and such a vote will be taken if at least half the GB members support such a proposal to the chair. After the vote is taken the record of the vote (e.g., who voted and how) will be made available to the collaboration. In the event of a removal, the open position(s) will be filled following the procedures in these bylaws.
  
  
@@ -340,7 +340,8 @@ For other elected Collaboration roles, the EVC is charged with establishing elec
 
 \section{Councils and Committees}
 \label{sec:councils}
-Four of the organizational structures overseen by the Spokespersons have representatives on the \exec as described in \S\ref{exec}.  These are the Science Council, the Technical Council, the Membership Committee and the Publications and Speakers Committee.  Their composition and charges are described in this section.  Three other standing committees for the Collaboration have been defined at this time and are described below.  
+Four of the organizational structures overseen by the Spokespersons have representatives on the \exec\ as described in 
+\S\ref{sec:exec}.  These are the Science Council, the Technical Council, the Membership Committee and the Publications and Speakers Committee.  Their composition and charges are described in this section.  Three other standing committees for the Collaboration have been defined at this time and are described below.  
 
 \subsection{Science Council and Analysis Working Groups}
 \label{sec:SC}
@@ -349,7 +350,7 @@ The Science Council works closely with the Spokespersons to coordinate the key s
 
 The Science Council approves the projects that lead to publications and is responsible for maintaining a list of Key Science topics  (\S\ref{sec:pubs}).
 
-Each analysis working group will have two co-coordinators who each serve for two year terms with the exception of one initial coordinator who will serve for a three-year term to enable staggered appointments in the future.  The Science Council chairs will solicit self-nominations for these co-coordinators positions. The Spokespersons will appoint coordinators with the advice of the Science Council chairs while considering the distribution of early and late career members when making these appointments. Coordinators will ordinarily not serve back-to-back terms.
+Each analysis working group will have two co-coordinators who each serve for two year terms with the exception of one initial coordinator who will serve for a three-year term to enable staggered appointments in the future.  The Science Council chairs will solicit self-nominations for these co-coordinator positions. The Spokespersons will appoint coordinators with the advice of the Science Council chairs while considering the distribution of early and late career members when making these appointments. Coordinators will ordinarily not serve back-to-back terms.
 
 
 \subsection{Technical Council and Technical Working Group}
@@ -633,7 +634,7 @@ The primary duties of an organizational ombudsperson are (1) to work with indivi
 
 Activities and functions most frequently undertaken by an ombudsperson include, but are not limited to:
 \begin{itemize}
-\item Listens and understands issues while remaining neutral with respect to the facts. The ombudsperson doesn’t listen to judge or to decide who is right or wrong. The ombudsperson listens to understand the issue from the perspective of the individual. This is a critical step in developing options for resolution.
+\item Listens and understands issues while remaining neutral with respect to the facts. The ombudsperson does not listen to judge or to decide who is right or wrong. The ombudsperson listens to understand the issue from the perspective of the individual. This is a critical step in developing options for resolution.
 \item Assists in reframing issues and developing and helping individuals evaluate options. This helps individuals identify the interests of various parties to the issues and helps focus efforts on potential options to meet those interests.
 \item Guides or coaches individuals to deal directly with other parties, including the use of formal resolution resources of the organization. An ombudsperson often seeks to help individuals improve their skill and their confidence in giving voice to their concerns directly.
 \item Refers individuals to appropriate resolution resources. An ombudsperson may refer individuals to one or more formal organizational resources that can potentially resolve the issue.
