first term start end in appendix

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -677,10 +677,10 @@ These bylaws may be amended by the GB. A new bylaw or an amendment may be presen
 \section{First Election and Voting Procedures}
 \label{app:first_election}
 
-For the initial election procedures the ICCC replaces the role of the GB, and an Interim Election and Voting Commission (IEVC) appointed by the ICCC conducts the elections and voting. 
+For the initial election procedures the ICCC replaces the role of the GB, and an Interim Election and Voting Commission (IEVC) appointed by the ICCC conducts the elections and voting.  The initially elected people begin to serve in their roles immediately after the elections are completed. The end of their terms is determined by adding the length of the nominal term for their position (one, two or three years) to June 30, 2018. 
 
 \subsubsection{First Election of Co-spokespersons} 
-The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates The two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
+The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates. The two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
 
 \subsubsection{First Election of the Governing Board}
 The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.). For the first election, the top 10 vote-receiving candidates are automatically selected for the GB. If the representation requirements outlined above are unfulfilled by the elected candidates, the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this juncture the  ICCC is empowered to make appoint the remaining seats to meet these requirements, drawing from the list of nominated candidates. 
@@ -692,7 +692,7 @@ After the GB is established and its chair selected, the ICCC is terminated.
 
 \section{Abbreviations}
 
-\Comment{For abbreviations used outside of a single section. Fill in with abbreviations from Pubs + Membership working group as appropriate}
+%\Comment{For abbreviations used outside of a single section. Fill in with abbreviations from Pubs + Membership working group as appropriate}
 
 \begin{table}[h]
 %\caption{default}
