ruhl membership email

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -467,15 +467,19 @@ After the Collaboration is formed with a first set of initial members (see \S\re
 
 \subsection{Initial Membership}
 \label{sec:initmembership}
-The Collaboration will initially consist of members who have satisfied the following criteria:
+The Collaboration will initially consist of members that were eligible to vote on these governance bylaws (by virtue of attendance at two or more Collaboration meetings, or a successful petition for eligibility), and cast a vote on them. 
 
-\begin{itemize}
-\item Attended at least two Collaboration meetings, and 
-
-\item Voted on the governance bylaws.
-\end{itemize}
+%The Collaboration will initially consist of members who have satisfied the following criteria:
+%
+%\begin{itemize}
+%\item Attended at least two Collaboration meetings, and 
+%
+%\item Voted on the governance bylaws.
+%\end{itemize}
 
 Within the first year of the Collaboration's establishment, prospective members can be granted membership by successfully petitioning the Membership Council despite not satisfying the above criteria.  The Membership Council may approve such applications during the first year without action by the Governing Board.  
+
+The Collaboration will initially consist of members that were eligible to vote on these governance bylaws (by virtue of attendance at two or more Collaboration meetings, or a successful petition for eligibility), and cast a vote on them. 
 
 \subsection{Membership Review and Changes in Status}
 The membership status of each member will be reviewed by the Membership Council each year. 
