--- a/bylaws.tex
+++ b/bylaws.tex
@@ -681,7 +681,9 @@ These bylaws may be amended by the GB. A new bylaw or an amendment may be presen
 \section{First Election and Voting Procedures}
 \label{app:first_election}
 
-For the initial election procedures the ICCC replaces the role of the GB, and an Interim Election and Voting Commission (IEVC) appointed by the ICCC conducts the elections and voting.  The initially elected people begin to serve in their roles immediately after the elections are completed. The end of their terms is determined by adding the length of the nominal term for their position (one, two or three years) to June 30, 2018. 
+For the initial election procedures the ICCC replaces the role of the GB, and an Interim Election and Voting Commission (IEVC) appointed by the ICCC conducts the elections and voting.  
+
+The elected candidates begin to serve immediately after the elections are completed. The end of their terms is determined by adding the length of the nominal term for their positions (one, two or three years) to June 30, 2018. 
 
 \subsubsection{First Election of Co-spokespersons} 
 The IEVC follows the election process as described in \S\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates. The two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
